<resources>
    <string name="app_name">MyApp</string>
    <string name="showmore">Show More</string>
    <string name="student_name">Student Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="team_name">Team Name</string>
    <string name="email_id">Email Id</string>
    <string name="membership_no">Membership No</string>
    <string name="proceed">PROCEED</string>
    <string name="username">Username</string>
    <string name="roll_no">Roll No</string>
    <string name="class1">Class</string>
    <string name="teacher">Teacher</string>
    <string name="studentimage">StudentImage</string>
    <string name="staffs">Staffs</string>
    <string name="arrowback">ArrowBack</string>
    <string name="addplus">AddPlus</string>
    <string name="staffimage">StaffImage</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="contact">Contact</string>
    <string name="emailimage">EmailImage</string>
    <string name="phoneimage">PhoneImage</string>
    <string name="dottedimage">DottedImage</string>
    <string name="save">SAVE</string>
    <string name="add_staff">Add Staff</string>


    <!--<string name="app_name">SchoolManagement</string>-->
    <string name="login_textview">LOGIN</string>
    <string name="girlimageview">GirlImageView</string>
    <string name="payment">PAYMENT</string>
    <string name="bellimageview">BellImageView</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="rupeeimageview">RupeeImageView</string>
    <string name="payable">Payable</string>
    <string name="my_cards">My Cards</string>
    <string name="add">+</string>
    <string name="slotimageview">SlotImageView</string>
    <string name="Atm_card_number">* * * * * * * * * * * * 3103</string>
    <string name="exp_20_23">EXP 20/23</string>
    <string name="cheristian_fernando">CHERISTIAN FERNANDO</string>
    <string name="arrowimageview">ArrowImageView</string>
    <string name="pay">Pay</string>
    <string name="loginimageview">LoginImageView</string>
    <string name="phone_number">Phone Number</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account ? Signup</string>
    <string name="signupimageview">SignupImageView</string>
    <string name="licence_number">Licence Number</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="signup">SIGNUP</string>
    <string name="backarrowimageview">BackarrowImageView</string>
    <string name="select_payment">SELECT PAYMENT</string>

    <string name="tutionfeeimageview">TutionFeeImageView</string>
    <string name="tution_fees">Tution Fees</string>
    <string name="eventimageview">EventImageView</string>
    <string name="events">Events</string>
    <string name="transportimageview">TransportImageView</string>
    <string name="transport">Transport</string>
    <string name="foodimageview">FoodImageView</string>
    <string name="food">Food</string>
    <string name="addcardbackarrowimageview">AddcardBackArrowImageView</string>
    <string name="add_card_details">ADD CARD DETAILS</string>
    <string name="vissaimageview">VissaImageView</string>
    <string name="mastercardimageview">MasterCardImageView</string>
    <string name="rupayimageview">RupayImageView</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="securly_save_this_card_for_a_faster_checkout_next_time">Securly save this card for a faster checkout next time.</string>

    <string name="card_details_will_be_saved_securely_based_of_the_industray_standerd">Card details will be saved securely. based of the industray standerd</string>
    <string name="expires">Expires</string>
    <string name="cvv">CVV</string>
    <string name="studentbackarrowimageview">BackArrowImageview</string>
    <string name="student_dashboard">STUDENT DASHBOARD</string>
    <string name="studentimageview">StudentImageView</string>
    <string name="rahul_arunashalam">Rahul Arunashalam</string>
    <string name="dob_28_08_18">DOB : 28-08-18</string>
    <string name="admin_no_pr1">Admin No : PR1</string>
    <string name="attendanceimageview">AttendanceImageView</string>
    <string name="attendance">Attendance</string>

    <string name="dairyimageview">DairyImageView</string>
    <string name="daily_dairy">Daily Dairy</string>
    <string name="profileimageview">ProfileImageView</string>
    <string name="profile">Profile</string>
    <string name="medicalimageview">MedicalImageView</string>
    <string name="medical">Medical</string>
    <string name="acadmeic_marks">ACAAMEIC MARKS</string>
    <string name="unit_test">Unit test</string>
    <string name="_70">70%</string>
    <string name="view_mark_sheet">View Mark Sheet</string>
    <string name="marksimageview">MarksImageView</string>
    <string name="quarterlymarksimageview">QuarterlyMarksImageView</string>
    <string name="quarterly_test">Quarterly test</string>

    <string name="affyearimageview">AffyearImageView</string>
    <string name="affyearly_test">Affyearly test</string>


    <string name="annuallyimageview">AnnuallyImageView</string>
    <string name="annually_test">Annually test</string>


    <!--<string name="submit">SUBMIT</string>-->


    <!--driver module-->
    <string name="one">one</string>
    <string name="request">Request</string>
    <string name="datetime">Date Time</string>
    <string name="schoolvan">SchoolVan</string>
    <string name="startpoint">StartPoint</string>
    <string name="endpoint">EndPoint</string>
    <string name="paststop">PastStop</string>
    <string name="nextstop">NextStop</string>
    <string name="estimatedtime">EstimatedTime</string>
    <string name="approve">APPROVE</string>
    <string name="reject">REJECT</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="timedelayed">TimeDelayed</string>
    <string name="comment">Comment</string>
    <string name="reason">Reason :</string>
    <string name="division">Division :</string>
    <string name="stuclass">Class :</string>
    <string name="manage_leaves">Manage Leaves</string>
    <string name="application">Application</string>
    <string name="pending_leave">Pending Leave</string>
    <string name="total_leave">Total Leave</string>
    <string name="english">ENGLISH</string>
    <string name="mathematics">MATHEMATICS</string>
    <string name="science">SCIENCE</string>
    <string name="computer">COMPUTER</string>
    <string name="drawing">DRAWING</string>
    <string name="general_info">GENERAL INFO</string>
    <string name="subjects">Subjects</string>
    <string name="gallery">Gallery</string>
    <string name="otherevents">OtherEvents</string>
    <string name="teachersday">TeachersDay</string>
    <string name="sportsday">SportsDay</string>
    <string name="annualday">AnnualDay</string>


    <string name="raje_selvam">Raje Selvam</string>
    <string name="fathername_selvam_s">FatherName:Selvam.S</string>
    <string name="_91_90562_45089">+91 90562 45089</string>

    <string name="phoneimageview">PhoneImageView</string>
    <string name="admissionimageview">AdmissionImageView</string>
    <string name="wsb_0015ajhg2">WSB - 0015AJHG2</string>
    <string name="admission_number">Admission Number</string>
    <string name="sectionimageview">SectionImageView</string>
    <string name="a_first_class_top">A - First Class (Top)</string>
    <string name="section">Section</string>
    <string name="exams">Exams</string>
    <string name="examimageview">ExamImageView</string>
    <string name="discipline">Discipline</string>
    <string name="outoffimageview">OutoffImageView</string>
    <string name="insidentdetails_nothing">Insidentdetails : Nothing</string>
    <string name="sep_2018">Sep 2018</string>
    <string name="bluedotimageview">BlueDotImageView</string>
    <string name="student_name_sebastion">Student Name - Sebastion</string>
    <string name="reported_by_sebas">Reported by : Sebas</string>
    <string name="rosedotimageview">RoseDotImageView</string>
    <string name="put_type">Put Type</string>
    <string name="sebas">Sebas</string>
    <string name="orangedotimageview">OrangeDotImageView</string>
    <string name="dpoints">DPoints</string>
    <string name="nothing">Nothing</string>
    <string name="skydotimageview">SkyDotImageView</string>
    <string name="action">Action</string>

    <string name="app_name1">SchoolApp</string>

    <string name="login">Login</string>
    <string name="textline1">Please give it to</string>
    <string name="textline2">the cashier to scan the code</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="order_food">Order food:</string>
    <string name="complete">Complete</string>


</resources>
