<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_staff"
    tools:context=".StaffActivity">

    <TextView
        android:id="@+id/StaffHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="696dp"
        android:text="@string/staffs"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ArrowBack"
        android:layout_width="33dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="682dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/StaffHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/arrowback" />

    <ImageView
        android:id="@+id/AddPlus"
        android:layout_width="33dp"
        android:layout_height="43dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="682dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StaffHeading"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/addplus" />

    <android.support.v7.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="319dp"
        android:layout_height="173dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="426dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArrowBack"
        app:layout_constraintVertical_bias="0.018">

        <ImageView
            android:id="@+id/StaffImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/staff_image"
            android:contentDescription="@string/staffimage" />

        <TextView
            android:id="@+id/StaffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/StaffClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="35dp"
            android:hint="@string/class1"
            android:textColorHint="@color/grey_40" />

        <TextView
            android:id="@+id/StaffSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="60dp"
            android:hint="@string/subject"
            android:textColorHint="@color/grey_40" />

        <TextView
            android:id="@+id/StaffContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="95dp"
            android:hint="@string/contact"
            android:textColorHint="@color/grey_60" />

        <ImageView
            android:id="@+id/EmailImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="115dp"
            app:srcCompat="@drawable/ic_mail"
            android:contentDescription="@string/emailimage" />

        <ImageView
            android:id="@+id/PhoneImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="140dp"
            app:srcCompat="@drawable/ic_local_phone"
            android:contentDescription="@string/phoneimage" />

        <ImageView
            android:id="@+id/DottedImage"
            android:layout_width="85dp"
            android:layout_height="78dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/dottedd"
            android:contentDescription="@string/dottedimage" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>